--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config src/seed/route.ts"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.0.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
+    "mapbox-gl": "^3.12.0",
+    "mysql2": "^3.14.1",
+    "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
+    "nodemailer": "^6.10.1",
+    "opencage-api-client": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "zod": "^3.25.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
