--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/search-js-react": "^1.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.12.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
@@ -27,6 +28,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
